# nukleus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  nk_implementation.cpp  nukleus.hpp
demo/: main_sdl2.cpp
demo/common/: canvas.cpp  common.hpp  node_editor.cpp  overview.cpp  style.cpp  style_configurator.cpp
src/nukleus/: nukleus.cpp  nukleus.hpp
tests/enum_design/: README.md  enum_common.hpp  enum_crtp.cpp  enum_simple.cpp  enum_wrap.cpp  main.cpp
